# maximos-standard-lib

./: .gitignore  CMakeLists.txt  LICENSE  array.hpp  compile_flags.txt  optional.cpp  optional.hpp  readme.md  tuple.hpp  utils.hpp  vector.hpp
src/: array.hpp  fastString.cpp  fastString.h  flatmap.hpp  optional.cpp  tuple.hpp  utils.hpp
tests/: CMakeLists.txt  Makefile  array_tests.cpp  fastString_tests.cpp  genTestVector  optional_tests.cpp  tuple_tests.cpp  vector_tests.cpp
